# 2011Corel

./: LICENSE
G.711/: g711.c  mycostg711.c  mycostg711.opt  mycostg711.plg
G.721/: encode.dsp  encode.dsw  encode.opt
G.728/: Makefile
G.728/api/: adapters.c  consealg728.c  g728api.c  g728tables.c  g728tables.h  owng728.c  owng728.h  pitchg728.c  pstg728.c  scratchmem.h  vq.c
G.728/include/: g728.h  g728api.h
G.728/samples/: g728decoder.c  g728decoder.h  g728encoder.c  g728encoder.dsp  g728encoder.dsw  g728encoder.h  g728encoder.opt  g728encoder.plg
G.729/G729(LD-CELP)/: 020_hdr.asm  21kflags.h  Makefile  README  adapters.c  cbindex.asm  cbindex.h  cmain.c  codebook.c  common.h  data.c  data.h  dmain.c  ez.ach  ezplay.c  fast.h  filters.c  fio21k.asm  global.c  io-sparc.c  parm.h  postfil.c  prototyp.h  qsize.h
G.729/G729(LD-CELP)/ccelp/: ccelp.dsp  ccelp.dsw  ccelp.opt
G.729/G729A_Eval/: EasyG729A_decoder.c  EasyG729A_encoder.c
G.729/G729A_Eval/test_decode/: EasyG729A.lib  EasyG729A_decoder.cpp  TEST_DECODE.dsp  TEST_DECODE.dsw  TEST_DECODE.opt  TEST_DECODE.plg
G.729/G729A_Eval/test_encode/: EasyG729A_encoder.cpp  test_encode.dsp  test_encode.dsw  test_encode.opt  test_encode.plg
GPS/DOG/Main/: DOG.sln  SDKConfigDef.h  makefile  version.h
GPS/DOG/Main/BlackBoxTest/: BlackBoxTest.sln
GPS/DOG/Main/BuildConfig/: PerfIISDK_QA_Release.h
GPS/DOG/Main/LaunchTM/: CPU_Usage.h  Common.cpp  LaunchTM.cpp  LaunchTM.sln  LaunchTM.vcproj  ReadMe.txt  RegUtil.cpp  RegUtil.h  stdafx.cpp  stdafx.h
GPS/DOG/Main/Perf2UI/: ChartFrm.cpp  ChartFrm.h  ChildFrm.cpp  ChildFrm.h  ChildView.cpp  DogProxy.cpp  DogProxy.h  EventIdNameMap.cpp  EventIdNameMap.h  MainFrm.cpp  MainFrm.h  MessageFrm.cpp  MessageFrm.h  MyApp.cpp  MyApp.h  (+6 more)
GSM/: Add.c  Code.c  Config.h  Debug.c  Decode.c  GSM_IMPL.C  GSM_OPTI.C  GSM_PRIN.C  Gsm.h  Gsm_crea.c  Gsm_deco.c  Gsm_dest.c  Gsm_enco.c  Gsm_expl.c  LONG_TER.C  LPC.C  PREPROCE.C  PRIVATE.H  PROTO.H  RPE.C  SHORT_TE.C  TABLE.C  TOAST_AL.C  TOAST_AU.C  TOAST_LI.C  TOAST_UL.C  Toast.c  Toast.dsw  Toast.h  UNPROTO.H
H.263/: CodeInter.cpp  CodeOneIntra.cpp  Countbit.cpp  Dct.cpp  DecodeDlg.cpp  DecodeDlg.h  Display.cpp  Display.h  EncodeDlg.cpp  EncodeDlg.h  Getbits.cpp  Getbits.h  Getblk.cpp  Getblk.h  Gethdr.cpp  Gethdr.h  Getpic.cpp  Getpic.h  Getvlc.cpp  Getvlc.h  Global.h  IO.cpp  Idct.cpp  Idct.h  Indices.h  MainFrm.cpp  MainFrm.h  Mot_est.cpp  MotionDlg.cpp  MotionDlg.h  OpenFiles.cpp  OpenFiles.h  OutputVlc.cpp  OutputVlc.h  Pred.cpp  ProgressBar.cpp  ProgressBar.h  PropertyDlg.cpp  PropertyDlg.h  RateControl.cpp  (+27 more)
H.263/res/: codedecoder.rc2
MPEG-4/CVS/: Entries  Repository
MPEG-4/src/: encore.c  encore.h  mot_est_mb.c
MPEG-4/src/CVS/: Entries  Repository
SkypeAPI/: ReadMe.txt  SkypeAPI.cpp  SkypeAPI.h  SkypeAPIApplication.aps  SkypeAPIApplication.clw  SkypeAPIApplication.cpp  SkypeAPIApplication.dsp  SkypeAPIApplication.dsw  SkypeAPIApplication.h  SkypeAPIApplication.opt  SkypeAPIApplication.plg  SkypeAPIApplication.rc  SkypeAPIApplicationDlg.cpp  SkypeAPIApplicationDlg.h  StdAfx.cpp  StdAfx.h  resource.h
SkypeAPI/res/: SkypeAPIApplication.rc2
Video/Tool/LibDogProxy/: DogEventProvider.cpp  LibDogProxy.sln  LibDogProxy.vcproj
ffmpeg_h264/: H264Dec.opt  H264Dec.plg  H264Dec.sdf  H264Dec.sln  H264Dec.vcproj  H264Dec.vcxproj  H264Dec.vcxproj.filters  allcodecs.c  avcodec.h  cabac.c  cabac.h  cavlc.c  cavlc.h  common.c  common.h  config.h  dsputil.c  dsputil.h  error_resilience.c  fill_func.c  fill_func.h  filter_mb.c  filter_mb.h  golomb.c  golomb.h  h264.c  h264.h  h264context.h  h264data.h  imgconvert.c  mem.c  mpegvideo.c  mpegvideo.h  parser.c  pred_mb.c  pred_mb.h  rational.h  simple_idct.c  simple_idct.h  utils.c
ffmpeg_h264/Debug/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  H264Dec.bsc  H264Dec.ilk  H264Dec.lastbuildstate  H264Dec_manifest.rc  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
ffmpeg_h264/data/: dsp_dec.yuv  readme.txt  test.264
josua-0.9.2/josua-0.9.2/: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in
josua-0.9.2/josua-0.9.2/conf/: Makefile.am  Makefile.in  config  config2
josua-0.9.2/josua-0.9.2/scripts/: Makefile.in  ac_c_gethostbyname_r.m4  acx_pthread.m4
josua-0.9.2/josua-0.9.2/src/: Makefile.am  Makefile.in  README  callbackuac.c  callbackuas.c  josua.c  josua.h  msg_req.c  msg_resp.c  port_net.c  rcfile.c  rcfile.h  streams.c  tcp_tl.c  transaction_mt.c  ua_core.c  ualogic.c  udp_send.c  udp_tl.c
josua-0.9.2/josua-0.9.2/windows/: Makefile.am  Makefile.in  README  josua.dsp  josua.dsw  josua.opt  josua.plg  osipfsm  osipparser
libosip-0.9.2/libosip-0.9.2/: Makefile.in  aclocal.m4  config.h.in  configure
libosip-0.9.2/libosip-0.9.2/conf/: Makefile.in  torture_sdps
libosip-0.9.2/libosip-0.9.2/doc/: Makefile.in  osip.1
libosip-0.9.2/libosip-0.9.2/fsm/: Makefile.in  dialog.c  osip.c
libosip-0.9.2/libosip-0.9.2/osip/: Makefile.in
libosip-0.9.2/libosip-0.9.2/parser/: Makefile.in  hdr_body.dsp  hdr_body.dsw  hdr_body.opt  hdr_body.plg  msg_read.c
libosip-0.9.2/libosip-0.9.2/scripts/: Makefile.in
libosip-0.9.2/libosip-0.9.2/test/: Makefile.in
libosip-0.9.2/libosip-0.9.2/windows/: Makefile.in  osipfsm.dsp  osipfsm.opt  osipparser.dsp  osipparser.opt  osipparser.plg
(+1093 files in other folders)
